# 2026Spring-25307038-Lab1

./: AI1.md  README.md  README_en.md  build-profile.json5  fix_script.ps1  run_fix.ps1  temp_extract.txt  temp_full.txt
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: AudioDecoder.cpp  AudioDecoder.h  CMakeLists.txt  HuaweiCloudASRNative.cpp  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/ets/common/constants/: BreakpointConstants.ets  CommonConstants.ets
entry/src/main/ets/common/utils/: BreakpointSystem.ets
entry/src/main/ets/components/: AiCaptionDisplay.ets  CaptionFontComponent.ets  ColorPickerDialog.ets  LanguageDialog.ets  ScaleDialog.ets  SetVolume.ets  SpeedDialog.ets  VideoOperate.ets
entry/src/main/ets/controller/: AvPlayerController.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: AiCaptionConfig.ets  BookmarkModel.ets  SubtitleConfig.ets  VideoDataModel.ets
entry/src/main/ets/pages/: BookmarkPage.ets  Index.ets
entry/src/main/ets/services/: BookmarkStore.ets  CoreSpeechProvider.ets  VideoAudioCaptureService.ets
entry/src/main/ets/utils/: AudioPipeline.ets
entry/src/main/ets/view/: BasicVideoPlayer.ets  VideoItem.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
